--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -13,7 +13,7 @@
 			android:showSilent="false" android:showDefault="true" android:key="notification_sound"
 			android:title="@string/prefs_notification_sound" android:dependency="notification_enabled" /-->
 	</PreferenceCategory>
-	<PreferenceCategory android:title="@string/prefs_lunch">
+	<!-- PreferenceCategory android:title="@string/prefs_lunch">
 		<CheckBoxPreference android:key="lunch_autoround_enabled"
 			android:defaultValue="false" android:title="@string/prefs_lunch_autoround"
 			android:summaryOn="@string/prefs_lunch_autoround_on"
@@ -22,7 +22,7 @@
 			android:defaultValue="1:00" android:title="@string/prefs_lunch_autoround_time"
 			android:summary="@string/prefs_time_to_round" android:dialogTitle="@string/dialog_hours_title"
 			android:dependency="lunch_autoround_enabled" />
-	</PreferenceCategory>
+	</PreferenceCategory-->
 	<PreferenceCategory android:title="@string/general_prefs">
 		<EditTextPreference android:key="first_day"
 			android:defaultValue="1" android:title="@string/pref_first_day"
